2011-10-21  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/util/list.scm: separated from (rfc http).

	* test/tests/text/sxml/ssax.scm (ssax): ssax test case has been added.

	* src/load.c (load): if target loading file had hash-bang, load did not
	restore the previous mode. it's been fixed.

	* src/library.c (import): rename import did not work. it's been fixed.

2011-10-20  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm: fixed miscompiling when builtin test instruction had
	let clause.

	* sitelib/util/file.scm (util file): Gauche like file utility has been added.

	* sitelib/util/port.scm (util port): Gauche like port utility has been added.

	* sitelib/srfi/%3a38/with-shared-structure.scm (srfi-38): For portability,
	this library has been added.

2011-10-17  Takashi Kato  <ktakashi@ymail.com>

	* boot/lib/macro.scm (expand-syntax): fixed replacing non equal identifiers.

	* src/identifier.c (Sg_IdentifierEqP): fixed comparing identifiers.

2011-09-08  Takashi Kato  <ktakashi@ymail.com>

	* src/library.c (import_parents): improved library system.

2011-09-07  Takashi Kato  <ktakashi@ymail.com>

	* src/number.c (Sg_Sin): fixed when argument was not fixnum nor complex number
	it just returned flonumise the argument.

	* sitelib/srfi/%3a0/cond-expand.scm: cond-expand was supported.

2011-09-06  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (renv): made it not to use hashtable for cache.

	* sitelib/srfi/%3a98.scm: supported srfi-98.

	* boot/compiler.scm (pass2/lambda-lifting): added lambda lifting.

	* src/vm.c (expand_stack): implemented stack expantion.

2011-08-04  Takashi Kato  <ktakashi@ymail.com>

	* src/number.c (Sg_Mul): fixed bignum * 0 calculation. it returned bignum.

2011-07-26  Takashi Kato  <ktakashi@ymail.com>

	* src/writer.c (write_symbol): fixed unneccessary case for escape symbol.

2011-07-21  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub: fixed list-transpose+ SIGSEGV.

2011-07-18  Takashi Kato  <ktakashi@ymail.com>
